Registro confirmo Contraseña

--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
@@ -45,7 +45,7 @@
       <mat-icon>login</mat-icon>
         Entrar
       </button>
-  
+  <a href="/register">Registrarse</a>
     </form>
   </div>
 </body>
