--- a/Angular/proyectoFinal/src/app/paginas/register-page/register-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/register-page.component.html
@@ -1,98 +1,12 @@
-<body>
-    
-
-    <div class="form-container">
-        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-            <mat-form-field class="full-width">
-                <mat-label>Nick</mat-label>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="nick"
-                  [errorStateMatcher]="matcher"
-               
-                />
-                <mat-error *ngIf="loginForm.controls['nick'].hasError('required')">
-                  El Curso es <strong>obligatorio</strong>
-                </mat-error>
-            <mat-form-field class="full-width">
-                <mat-label>Nom</mat-label>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="nombre"
-                  [errorStateMatcher]="matcher"
-               
-                />
-                <mat-error *ngIf="loginForm.controls['nombre'].hasError('required')">
-                  El Curso es <strong>obligatorio</strong>
-                </mat-error>
-            <mat-form-field class="full-width">
-                <mat-label>Apellidos</mat-label>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="apellidos"
-                  [errorStateMatcher]="matcher"
-               
-                />
-                <mat-error *ngIf="loginForm.controls['apellidos'].hasError('required')">
-                  El Curso es <strong>obligatorio</strong>
-                </mat-error>
-            <mat-form-field class="full-width">
-        <mat-label>Curso</mat-label>
-        <input
-          type="text"
-          matInput
-          formControlName="centro"
-          [errorStateMatcher]="matcher"
-       
-        />
-        <mat-error *ngIf="loginForm.controls['centro'].hasError('required')">
-          El Centro es <strong>obligatorio</strong>
-        </mat-error>
-      </mat-form-field>
-            <mat-form-field class="full-width">
-                <mat-label>Email</mat-label>
-                <input
-                  type="text"
-                  matInput
-                  formControlName="email"
-                  [errorStateMatcher]="matcher"
-                
-                />
-                <mat-error *ngIf="loginForm.controls['email'].hasError('required')">
-                  El email es <strong>obligatorio</strong>
-                </mat-error>
-                <mat-error *ngIf="loginForm.controls['email'].hasError('email')">
-                  Ha de ser una dirección de correo
-                </mat-error>
-              </mat-form-field>
-            <mat-form-field class="full-width">
-                <mat-label>Password</mat-label>
-                <input
-                  type="password"
-                  matInput
-                  formControlName="password"
-                  [errorStateMatcher]="matcher"
-                />
-                <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
-                  La contraseña es <strong>obligatoria</strong>
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field class="full-width">
-                <mat-label>Re-Password</mat-label>
-                <input
-                  type="password"
-                  matInput
-                  formControlName="repassword"
-                  [errorStateMatcher]="matcher"
-                />
-                <mat-error *ngIf="loginForm.controls['repassword'].hasError('required')">
-                  La contraseña es <strong>obligatoria</strong>
-                </mat-error>
-              </mat-form-field>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-</body>
+<ng-container *ngIf="showForm1; else showForm2">
+  <form #form1="ngForm" (ngSubmit)="submitForm1(form1.value)">
+  
+    <button type="submit">Enviar Formulario 1</button>
+  </form>
+</ng-container>
+<ng-template #showForm2>
+  <form #form2="ngForm" (ngSubmit)="submitForm2(form2.value)">
+    <!-- inputs de formulario 2 -->
+    <button type="submit">Enviar Formulario 2</button>
+  </form>
+</ng-template>
