--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
@@ -17,4 +17,5 @@
   </mat-form-field>
 
   <button mat-raised-button color="primary" type="submit">Iniciar Sesión</button>
+  <a [routerLink]="['/register']" routerLinkActive="router-link-active" >Registrate</a>
 </form>
