--- a/Angular/proyectoFinal/src/app/paginas/register-page/teacher-form/teacher-form.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/teacher-form/teacher-form.component.html
@@ -24,7 +24,7 @@
     </mat-form-field>
     <br>
     <mat-form-field>
-      <input matInput placeholder="Centro" [(ngModel)]="profesor.centro" name="centro">
+      <input matInput placeholder="Centro" [(ngModel)]="profesor.centro" name="centro" required>
     </mat-form-field>
     <br>
     <div *ngIf="profesor.contrasena != profesor.confirmarContrasena">
