--- a/Angular/proyectoFinal/src/app/paginas/register-page/register-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/register-page.component.html
@@ -1,18 +1,32 @@
+<body class=" d-flex justify-content-center
+align-items-center vh-100">
 
-<div class="testbox rounded-div frame" ng-style="{'background-color': vm.color}">
-  <h1>Crea una cuenta</h1>
+  <div>
 
-  <button class= "custom-btn btn-3" ng-click="vm.changeColor('blue')" (click)="mostrarFormulario1 = true; mostrarFormulario2 = false"><span>Alumnos</span></button>
-    <button class= "custom-btn btn-4" ng-click="vm.changeColor('green')" (click)="mostrarFormulario1 = false; mostrarFormulario2 = true"><span>Profesores</span></button>
+    <div class="testbox rounded-div frame">
 
-    <ng-container *ngIf="mostrarFormulario1">
-      <app-student-form></app-student-form>
-    </ng-container>
+      <div class="text-center fs-1 fw-bold">
+        <h1>Crea una cuenta</h1>
+      </div>
 
-    <ng-container *ngIf="mostrarFormulario2">
-      <app-teacher-form></app-teacher-form>
-    </ng-container>
+      <button class="custom-btn btn-3" (click)="mostrarFormulario1 = true; mostrarFormulario2 = false">
+        <span>Alumnos</span>
+      </button>
 
-</div>
+      <button class="custom-btn btn-4" (click)="mostrarFormulario1 = false; mostrarFormulario2 = true">
+        <span>Profesores</span>
+      </button>
 
+      <ng-container *ngIf="mostrarFormulario1">
+        <app-student-form></app-student-form>
+      </ng-container>
 
+      <ng-container *ngIf="mostrarFormulario2">
+        <app-teacher-form></app-teacher-form>
+      </ng-container>
+
+    </div>
+
+  </div>
+
+</body>
