--- a/Angular/proyectoFinal/src/styles.css
+++ b/Angular/proyectoFinal/src/styles.css
@@ -5,3 +5,6 @@ html, body { height: 100%; background-color: #323232;
     
     color: white;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
