--- a/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.html
@@ -1,7 +1,7 @@
 <div class="bg-primary p-5 rounded-5 text-secondary">
   <form>
     <mat-form-field>
-      <input matInput placeholder="Nick" [(ngModel)]="alumno.nick" name="nick" required>
+      <input matInput placeholder="nickname" [(ngModel)]="alumno.nickname" name="nickname" required>
     </mat-form-field>
     <br>
     <mat-form-field>
@@ -10,32 +10,32 @@
     </mat-form-field>
     <br>
     <mat-form-field>
-      <input matInput type="password" placeholder="Contraseña" [(ngModel)]="alumno.contrasena" name="contrasena"
+      <input matInput type="password" placeholder="password" [(ngModel)]="alumno.password" name="contrasena"
         required minlength="8">
     </mat-form-field>
     <br>
     <mat-form-field>
-      <input matInput type="password" placeholder="Confirmar Contraseña" [(ngModel)]="alumno.confirmarContrasena"
+      <input matInput type="password" placeholder="confirmarContrasena" [(ngModel)]="alumno.confirmarContrasena"
         name="confirmarContrasena" required minlength="8">
     </mat-form-field>
     <br>
     <mat-form-field>
-      <input matInput placeholder="Nombre" [(ngModel)]="alumno.nombre" name="nombre" required>
+      <input matInput placeholder="name" [(ngModel)]="alumno.name" name="name" required>
     </mat-form-field>
     <br>
     <mat-form-field>
-      <input matInput placeholder="Apellidos" [(ngModel)]="alumno.apellidos" name="apellidos" required>
+      <input matInput placeholder="Apellidos" [(ngModel)]="alumno.surnames" name="surnames" required>
     </mat-form-field>
     <br>
     <mat-form-field>
-      <input matInput placeholder="Nacimiento" [(ngModel)]="alumno.nacimiento" name="nacimiento">
+      <input matInput placeholder="birth_date" [(ngModel)]="alumno.birth_date" name="birth_date">
     </mat-form-field>
     <br>
-    <div *ngIf="alumno.contrasena != alumno.confirmarContrasena">
-      Las contraseñas no coinciden.
+    <div *ngIf="alumno.password != alumno.confirmarContrasena">
+      Las passwords no coinciden.
     </div>
     <br>
     <button mat-raised-button color="primary" class="btn btn-primary" type="submit" (click)="enviar()"
-      [disabled]="alumno.contrasena != alumno.confirmarContrasena">Registrarse</button>
+      [disabled]="alumno.password != alumno.confirmarContrasena">Registrarse</button>
   </form>
 </div>
