--- a/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.html
@@ -1,4 +1,5 @@
-<div class="bg-primary p-5 rounded-5 text-secondary">
+<div class="bg-light p-5 rounded-5 text-secondary">
+  <h2>Alumno</h2>
   <form>
     <mat-form-field>
       <input matInput placeholder="Nick" [(ngModel)]="alumno.nick" name="nick" required>
