--- a/Angular/proyectoFinal/src/app/paginas/register-page/teacher-form/teacher-form.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/teacher-form/teacher-form.component.html
@@ -1,8 +1,7 @@
 
-<div class="bg-light p-5 rounded-5 text-secondary">
+<div class="bg-success p-5 rounded-5 text-secondary">
 
 <form >
-  <h2>Profesor</h2>
     <mat-form-field>
       <input matInput placeholder="Nick" [(ngModel)]="profesor.nick" name="nick" required>
     </mat-form-field>
