--- a/Angular/proyectoFinal/src/styles.css
+++ b/Angular/proyectoFinal/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; 	background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-
+html, body { height: 100%; background-color: #323232;
     font-family: Arial, sans-serif;
     
     color: white;}
