--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -1,1 +1,51 @@
-<p>student-page works!</p>
+<!-- HTML -->
+<div class="profile-page">
+    <h1 class="page-title">Perfil de Usuario</h1>
+    <div class="user-info">
+      <h2>Información del Usuario</h2>
+      <p><strong>Nickname:</strong> {{teacherForm.value.nickname}}</p>
+      <p><strong>Nombre:</strong> {{teacherForm.value.name}}</p>
+      <p><strong>Apellidos:</strong> {{teacherForm.value.surnames}}</p>
+      <p><strong>Centro:</strong> {{teacherForm.value.center}}</p>
+    </div>
+    <div class="edit-section">
+      <h2>Editar Información</h2>
+      <form [formGroup]="teacherForm">
+        <mat-form-field>
+          <input matInput placeholder="nickname" formControlName="nickname">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput placeholder="Email" formControlName="email">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput type="password" placeholder="password" formControlName="password">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput type="password" placeholder="Confirmar password" formControlName="confirmarpassword">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput placeholder="name" formControlName="name">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput placeholder="surnames" formControlName="surnames">
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput placeholder="center" formControlName="center">
+        </mat-form-field>
+        <br>
+        <div *ngIf="teacherForm.get('password')?.value !== teacherForm.get('confirmarpassword')?.value">
+          Las passwords no coinciden.
+        </div>
+        <br>
+        <button mat-raised-button color="primary" class="btn btn-primary" type="submit" (click)="enviar()">Guardar Cambios</button>
+      </form>
+    </div>
+  </div>
+  
+  
