--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.css
@@ -1,6 +1,22 @@
+:root {
+	--clr-pink: rgb(255, 158, 174);
+	--clr-orange: hsl(39, 100%, 50%);
+	--clr-yellow: hsl(60, 100%, 50%);
+	--clr-orange2: hsl(22, 100%, 50%);
+	--clr-yellow2: rgb(255, 213, 0);
+	--clr-green: hsl(133, 100%, 54%);
+	--clr-blue: hsl(240, 98%, 55%);
+	--clr-magenta: hsl(300, 100%, 50%);
+  }
+
 .form-v8-{
 	margin:  0;
 }
+.frame {
+	width: 90%;
+	margin: 0em auto;
+	text-align: center;
+  }
 .page-content {
 	width: 100%;
 	margin:  0 auto;
@@ -40,14 +56,14 @@
 	display: -webkit-flex;
 }
 .form-v8-content .form-left {
-	margin-bottom: -4px;
+	margin-bottom: 0px;
 }
 .form-v8-content .form-left img {
 	border-top-left-radius: 8px;
 	border-bottom-left-radius: 8px;
 }
 .form-v8-content .form-right {
-    padding: 30px 0;
+    padding: 0px 0;
 	position: relative;
 	width: 100%;
 	background: #3d5983;
@@ -80,7 +96,7 @@
 	font-size: 28px;
 	font-weight: 400;
 	color: #ccc;
-	padding-bottom: 22px;
+	padding-bottom: 10px;
 	border-bottom: 3px solid;
 	border-bottom-color: rgba(255, 255, 255, 0.2);
 	width: 100%;
@@ -290,3 +306,103 @@
   letter-spacing: 0.2em;
   transition: ease 0.3s;
 }
+
+/* boton superior profesor y estudiante */
+.custom-btn {
+    width: 8.125rem;
+    height: 2.5rem;
+    color: #fff;
+    border-radius: 5px;
+    padding: 0.625em 1.5em;
+    font-family: inherit;
+    font-weight: 700;
+    background: transparent;
+    cursor: pointer;
+     transition: all 3000ms ease;
+    position: relative;
+    display: inline-block;
+     box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+     7px 7px 20px 0px rgba(0, 0, 0, .1),
+       4px 4px 5px 0px rgba(0, 0, 0, .1);
+     outline: none;
+    border: none;
+  }
+  /* button flip */
+
+  /* 12 */
+.btn-12 {
+	margin-left: 1.5em;
+	position: relative;
+	right: 20px;
+	bottom: 55px;
+	border: none;
+	box-shadow: none;
+	width: 130px;
+	height: 40px;
+	line-height: 42px;
+	-webkit-perspective: 230px;
+	perspective: 230px;
+  }
+  
+  .btn-12 span {
+	background: rgb(0, 172, 238);
+	background: linear-gradient(0deg, rgba(0, 172, 238, 1) 0%, rgba(2, 126, 251, 1) 100%);
+	display: block;
+	position: absolute;
+	width: 130px;
+	height: 40px;
+	box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+	  7px 7px 20px 0px rgba(0, 0, 0, .1),
+	  4px 4px 5px 0px rgba(0, 0, 0, .1);
+	border-radius: 5px;
+	margin: 0;
+	text-align: center;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all .3s;
+	transition: all .3s;
+  }
+  
+  .btn-12 span:nth-child(1) {
+	box-shadow:
+	  -7px -7px 20px 0px #fff9,
+	  -4px -4px 5px 0px #fff9,
+	  7px 7px 20px 0px #0002,
+	  4px 4px 5px 0px #0001;
+	-webkit-transform: rotateX(90deg);
+	-moz-transform: rotateX(90deg);
+	transform: rotateX(90deg);
+	-webkit-transform-origin: 50% 50% -20px;
+	-moz-transform-origin: 50% 50% -20px;
+	transform-origin: 50% 50% -20px;
+  }
+  
+  .btn-12 span:nth-child(2) {
+	-webkit-transform: rotateX(0deg);
+	-moz-transform: rotateX(0deg);
+	transform: rotateX(0deg);
+	-webkit-transform-origin: 50% 50% -20px;
+	-moz-transform-origin: 50% 50% -20px;
+	transform-origin: 50% 50% -20px;
+  }
+  
+  .btn-12:hover span:nth-child(1) {
+	box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+	  7px 7px 20px 0px rgba(0, 0, 0, .1),
+	  4px 4px 5px 0px rgba(0, 0, 0, .1);
+	-webkit-transform: rotateX(0deg);
+	-moz-transform: rotateX(0deg);
+	transform: rotateX(0deg);
+  }
+  
+  .btn-12:hover span:nth-child(2) {
+	box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+	  7px 7px 20px 0px rgba(0, 0, 0, .1),
+	  4px 4px 5px 0px rgba(0, 0, 0, .1);
+	color: transparent;
+	-webkit-transform: rotateX(-90deg);
+	-moz-transform: rotateX(-90deg);
+	transform: rotateX(-90deg);
+  }
+  
