--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
@@ -21,7 +21,7 @@
 </form> -->
 <div class="form-v8">
   <div class="page-content">
-    <div class="form-v8-content">
+     <div class="form-v8-content">
       <div class="form-left">
         <img src="https://i.imgur.com/asFm7OR.png" alt="form">
       </div>
@@ -31,18 +31,19 @@
             <button mat-raised-button class="tablinks" type="submit">Login</button>
           </div>
         </div>
+
+        <div class="frame">
+          <button class="custom-btn btn-12" (click)="mostrarFormulario1 = false; mostrarFormulario2 = true">
+            <span>Alumno</span>
+            <span>Alumno</span>
+          </button>
     
-        
+          <button class="custom-btn btn-12" (click)="mostrarFormulario1 = true; mostrarFormulario2 = false">
+            <span>Profesor</span>
+            <span>Profesor</span>
+          </button>
+        </div>
 
-
-        <button class="custom-btn btn-3" (click)="mostrarFormulario1 = true; mostrarFormulario2 = false">
-          <span>Alumnos</span>
-        </button>
-  
-        <button class="custom-btn btn-4" (click)="mostrarFormulario1 = false; mostrarFormulario2 = true">
-          <span>Profesores</span>
-        </button>
-  
         <ng-container *ngIf="mostrarFormulario1">
           <app-login-teacher></app-login-teacher>
         </ng-container>
@@ -50,13 +51,8 @@
         <ng-container *ngIf="mostrarFormulario2">
           <app-login-student></app-login-student>
         </ng-container>
-
-
-
-
-
       </div>
-    </div>
+     </div> 
   </div>
 </div>
 
