--- a/Angular/proyectoFinal/src/app/paginas/profile-student/change-password-dialog/change-password-dialog.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/profile-student/change-password-dialog/change-password-dialog.component.html
@@ -3,11 +3,11 @@
 <form>
   <mat-form-field appearance="fill">
     <mat-label>Nueva contraseña</mat-label>
-    <input matInput type="password" [(ngModel)]="password">
+    <input matInput type="password" name="password" [(ngModel)]="password">
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Confirmar contraseña</mat-label>
-    <input matInput type="password" [(ngModel)]="confirmPassword">
+    <input matInput type="password" name="confirmPassword" [(ngModel)]="confirmPassword">
   </mat-form-field>
   <button mat-button (click)="save()">Guardar</button>
   <button mat-button (click)="dialogRef.close()">Cancelar</button>
