--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.css
@@ -49,7 +49,7 @@
 	-moz-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 	-webkit-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 	margin: 177px 0;
-	font-family: 'Source Sans Pro', sans-serif;
+	/* font-family: 'Source Sans Pro', sans-serif; */
 	color: #fff;
 	position: relative;
 	display: flex;
@@ -92,7 +92,7 @@
 	-ms-outline: none;
 	-moz-outline: none;
 	-webkit-outline: none;
-	font-family: 'Source Sans Pro', sans-serif;
+	/* font-family: 'Source Sans Pro', sans-serif; */
 	font-size: 28px;
 	font-weight: 400;
 	color: #ccc;
@@ -225,7 +225,7 @@
 	padding: 11px;
 }
 /* Responsive */
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 800px) {
 	.form-v8-content {
 		margin: 180px 20px;
 		flex-direction:  column;
@@ -314,7 +314,7 @@
     color: #fff;
     border-radius: 5px;
     padding: 0.625em 1.5em;
-    font-family: inherit;
+    font-family: 'Nunito', sans-serif;
     font-weight: 700;
     background: transparent;
     cursor: pointer;
@@ -332,6 +332,7 @@
   /* 12 */
 .btn-12 {
 	margin-left: 1.5em;
+	margin-bottom: 0.5em;
 	position: relative;
 	right: 20px;
 	bottom: 55px;
@@ -405,4 +406,3 @@
 	-moz-transform: rotateX(-90deg);
 	transform: rotateX(-90deg);
   }
-  
