--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-student/login-student.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-student/login-student.component.css
@@ -15,7 +15,7 @@
 	-moz-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 	-webkit-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 	/* margin: 177px 0; */
-	font-family: 'Source Sans Pro', sans-serif;
+	/* font-family: 'Source Sans Pro', sans-serif; */
 	color: #fff;
 	position: relative;
 	display: flex;
@@ -162,6 +162,7 @@
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	width: -webkit-fill-available;
+	width: -moz-available;
   height: 40px;
 	border: none;
 	margin: 5px 0 50px 0px;
@@ -178,7 +179,7 @@
 	padding: 11px;
 }
 /* Responsive */
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 800px) {
 	.form-v8-content {
 		margin: 180px 20px;
 		flex-direction:  column;
@@ -260,14 +261,15 @@
   color: #222;
   text-align: center;
   line-height: 40px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 800;
   letter-spacing: 0.2em;
   transition: ease 0.3s;
 }
 
 .mat-form-field {
 	text-align: center;
+	font-family: 'Nunito', sans-serif;
 }
 
 .mat-input-element{
