--- a/Angular/proyectoFinal/src/styles.css
+++ b/Angular/proyectoFinal/src/styles.css
@@ -2,10 +2,10 @@
 
 html, body { height: 100%; 	background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
 
-    font-family: Arial, sans-serif;
+    font-family: 'Nunito', sans-serif !important;
     
     color: white;}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;  }
