--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   <mat-form-field>
     <input matInput placeholder="Email" formControlName="email">
     <mat-error >
