--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -1,31 +1,35 @@
 .profile-link {
-    color: #0d6efd;
-    font-weight: bold;
     text-decoration: none;
-    margin-right: 10px;
+    color: #333;
+  }
+  
+  .profile-link:hover {
+    text-decoration: underline;
   }
   
   .ranking-container {
-    border: 1px solid #ccc;
-    border-radius: 5px;
     margin-top: 20px;
-    padding: 20px;
   }
   
   .no-rankings-message {
+    font-size: 18px;
     font-weight: bold;
-    color: red;
   }
   
   .rankings-message {
+    font-size: 18px;
     font-weight: bold;
-    color: green;
+    margin-bottom: 10px;
   }
   
   .rankings-list {
     list-style: none;
-    margin: 0;
     padding: 0;
+    margin: 0;
+  }
+  
+  .rankings-list li {
+    margin-bottom: 5px;
   }
   
   .form-group {
@@ -38,24 +42,25 @@
   }
   
   .form-control {
-    padding: 5px;
-    border-radius: 3px;
+    width: 100%;
+    padding: 10px;
     border: 1px solid #ccc;
-    width: 200px;
-    margin-right: 5px;
+    border-radius: 4px;
+    font-size: 16px;
+    margin-bottom: 10px;
   }
   
   .btn {
-    padding: 5px 10px;
-    background-color: #0d6efd;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
     cursor: pointer;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: #fff;
     transition: background-color 0.3s ease;
   }
   
   .btn:hover {
-    background-color: #007bff;
+    background-color: #0062cc;
   }
-  
